[package]
name = "lib_frankfurter"
description = "Rust wrapper around the Frankfurter API"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde_json = { workspace = true }
enum_dispatch = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }
url = { workspace = true }
reqwest = { version = "0.12.24", features = ["charset", "http2", "json", "system-proxy"], default-features = false }
serde = { version = "^1.0", features = ["derive"] }
thiserror = { version = "2.0.12" }
fast-float-compare = { version = "0.1.1" }

[features]
default = ["native-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
tokio = { workspace = true }
pretty_assertions = { version = "1.4.1" }
proptest = "1.9.0"
